--- a/package.json
+++ b/package.json
@@ -23,17 +23,25 @@
   },
   "homepage": "https://github.com/wangjiangman/10-npm-modules-per-day#readme",
   "dependencies": {
+    "connect": "^3.6.5",
     "express": "^4.16.2"
   },
   "devDependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.5.0",
+    "express-session": "^1.15.6",
     "finalhandler": "^1.1.0",
     "method-override": "^2.3.10",
+    "mime": "^2.0.3",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
+    "parseurl": "^1.3.2",
     "serve-favicon": "^2.4.5",
     "serve-index": "^1.9.1",
-    "type-is": "^1.6.15"
+    "type-is": "^1.6.15",
+    "uuid": "^3.1.0",
+    "vhost": "^3.0.2"
   }
 }
