--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
   "devDependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.5.0",
+    "express-http-proxy": "^1.0.7",
     "express-session": "^1.15.6",
+    "files-io": "^1.2.8",
     "finalhandler": "^1.1.0",
+    "helmet": "^3.9.0",
+    "join-io": "^2.0.0",
     "method-override": "^2.3.10",
     "mime": "^2.0.3",
     "morgan": "^1.9.0",
